...
        let imagesListViewController = ImagesListViewController(presenter: imagesListPresenter, imagesListHelper: imagesListHelper)
        
        imagesListViewController.tabBarItem = UITabBarItem(
            title: nil,
            image: UIImage(named: "tab_editorial_active"),
            selectedImage: nil)
        imagesListViewController.tabBarItem.accessibilityIdentifier = "ImagesList"
        
        let profilePresenter = ProfilePresenter(profileService: profileService,
                                                profileImageService: profileImageService,
                                                profileImageHelper: profileImageHelper)
        let profileViewController = ProfileViewController(presenter: profilePresenter)
        profileViewController.tabBarItem = UITabBarItem(
            title: nil,
            image: UIImage(named: "tab_profile_active"),
            selectedImage: nil)
        profileViewController.tabBarItem.accessibilityIdentifier = "Profile"
        
        self.viewControllers = [imagesListViewController, profileViewController]
    }
}

