...
        return authLogo
    }()
    
    private let enterButton: UIButton = {
        let enterButton = UIButton()
        enterButton.translatesAutoresizingMaskIntoConstraints = false
        enterButton.accessibilityIdentifier = "Authenticate"
        enterButton.backgroundColor = .YPWhite
        enterButton.setTitle("Войти", for: .normal)
        enterButton.setTitleColor(.YPBlack, for: .normal)
        enterButton.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        enterButton.layer.cornerRadius = 16
        enterButton.layer.masksToBounds = true
        enterButton.addTarget(nil, action: #selector(enterButtonTapped), for: .touchUpInside)
        return enterButton
...
