...
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    //MARK: - Calculated Properties
    private let webView: WKWebView = {
        let webView = WKWebView()
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.accessibilityIdentifier = "UnsplashWebView"
        return webView
    }()
    
    ///Шкала прогресса загрузки веба
    private let progressView: UIProgressView = {
        let progressView = UIProgressView()
...
